# PAIPatentes

./: CMakeLists.txt  Informe_PAI_Patentes.odt  README.md  Readme.txt  funciones.cpp  funciones.h  knearest.cpp  knearest.h  main  main.cpp  patente.cpp  patente.h  svm_model.cpp  svm_model.h
QT/Patente/: Patente.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT/build-Patente-Desktop-Debug/: Makefile  Patente  moc_mainwindow.cpp
QT/build-Patente-Desktop-Release/: Makefile  Patente  ui_mainwindow.h
letras/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  letters  letters.cpp
libsvm-small/: svm-predict  svm-scale  svm-train
