cmake_minimum_required(VERSION 2.8)
project( tarea-2 )
find_package( OpenCV REQUIRED )
include_directories("${CMAKE_SOURCE_DIR}")
add_library(knearest knearest.cpp knearest.h)
add_library(svm_model svm_model.cpp svm_model.h)
add_library(funciones funciones.cpp funciones.h)
add_executable( main main.cpp )
target_link_libraries( main funciones svm_model knearest ${OpenCV_LIBS} )